<resources>
    <string name="app_name">GeoDiary</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="add_entry">Add New Entry</string>
    <string name="exit">Exit App</string>
    <string name="previous">Previous</string>
    <string name="edit_text">Input entry manually: press here</string>
    <string name="hello_first_fragment">GeoDiary</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="input">Save New Entry</string>
    <string name="back">Return</string>
    <string name="entryname">Entry 1</string>
    <string name="entrydate">01.02.2020</string>
    <string name="entryaddress">Hallituskatu 1</string>
    <string name="entrybody">This is the first entry in the GeoDiary</string>
    <string name="entrylist">Previous Entries</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_get_location">Get Location</string>
</resources>
