<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="#D0EAE9"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingLeft="16dp"
        android:text="@string/entryname"
        android:textColor="#020202"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/list_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingLeft="16dp"
        android:text="@string/entrydate" />

    <TextView
        android:id="@+id/list_address"
        android:layout_width="124dp"
        android:layout_height="30dp"
        android:layout_gravity="left"
        android:paddingLeft="16dp"
        android:text="@string/entryaddress" />

    <TextView
        android:id="@+id/list_description"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="#FFFFFF"
        android:paddingVertical="10dp"
        android:paddingLeft="16dp"
        android:text="@string/entrybody" />
</LinearLayout>